; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_qlnx_os.c_qlnx_free_mem_txq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_qlnx_os.c_qlnx_free_mem_txq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.ecore_dev }
%struct.ecore_dev = type { i32 }
%struct.qlnx_fastpath = type { i32 }
%struct.qlnx_tx_queue = type { %struct.TYPE_5__, i32* }
%struct.TYPE_5__ = type { i32* }

@TX_RING_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, %struct.qlnx_fastpath*, %struct.qlnx_tx_queue*)* @qlnx_free_mem_txq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qlnx_free_mem_txq(%struct.TYPE_4__* %0, %struct.qlnx_fastpath* %1, %struct.qlnx_tx_queue* %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca %struct.qlnx_fastpath*, align 8
  %6 = alloca %struct.qlnx_tx_queue*, align 8
  %7 = alloca %struct.ecore_dev*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store %struct.qlnx_fastpath* %1, %struct.qlnx_fastpath** %5, align 8
  store %struct.qlnx_tx_queue* %2, %struct.qlnx_tx_queue** %6, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  store %struct.ecore_dev* %9, %struct.ecore_dev** %7, align 8
  %10 = load %struct.qlnx_tx_queue*, %struct.qlnx_tx_queue** %6, align 8
  %11 = getelementptr inbounds %struct.qlnx_tx_queue, %struct.qlnx_tx_queue* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = bitcast i32* %13 to i8*
  %15 = load i32, i32* @TX_RING_SIZE, align 4
  %16 = sext i32 %15 to i64
  %17 = mul i64 4, %16
  %18 = trunc i64 %17 to i32
  %19 = call i32 @bzero(i8* %14, i32 %18)
  %20 = load %struct.qlnx_tx_queue*, %struct.qlnx_tx_queue** %6, align 8
  %21 = getelementptr inbounds %struct.qlnx_tx_queue, %struct.qlnx_tx_queue* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %33

25:                                               ; preds = %3
  %26 = load %struct.ecore_dev*, %struct.ecore_dev** %7, align 8
  %27 = load %struct.qlnx_tx_queue*, %struct.qlnx_tx_queue** %6, align 8
  %28 = getelementptr inbounds %struct.qlnx_tx_queue, %struct.qlnx_tx_queue* %27, i32 0, i32 0
  %29 = call i32 @ecore_chain_free(%struct.ecore_dev* %26, %struct.TYPE_5__* %28)
  %30 = load %struct.qlnx_tx_queue*, %struct.qlnx_tx_queue** %6, align 8
  %31 = getelementptr inbounds %struct.qlnx_tx_queue, %struct.qlnx_tx_queue* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  store i32* null, i32** %32, align 8
  br label %33

33:                                               ; preds = %25, %3
  ret void
}

declare dso_local i32 @bzero(i8*, i32) #1

declare dso_local i32 @ecore_chain_free(%struct.ecore_dev*, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
